Register page from Team 8

--- a/06/PetStore/Web/Web.config
+++ b/06/PetStore/Web/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="PetDbConnectionString" connectionString="Data Source=tcp:petdbserver.database.windows.net,1433;Initial Catalog=PetDb;Persist Security Info=True;User ID=dev;Password=Password123"
+    <add name="PetDbConnectionString" connectionString="Server=tcp:dbservertest01.database.windows.net,1433;Initial Catalog=PetDB;Persist Security Info=False;User ID=dev;Password=ImamN8822;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
