--- a/06/PetStore/Web/packages.config
+++ b/06/PetStore/Web/packages.config
@@ -4,6 +4,7 @@
   <package id="AspNet.ScriptManager.bootstrap" version="3.4.1" targetFramework="net472" />
   <package id="AspNet.ScriptManager.jQuery" version="3.4.1" targetFramework="net472" />
   <package id="bootstrap" version="3.4.1" targetFramework="net472" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net472" />
@@ -15,5 +16,10 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Roslyn.Compilers.Common" version="1.2.20906.2" targetFramework="net472" />
+  <package id="Roslyn.Compilers.CSharp" version="1.2.20906.2" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="XAct.Core.PCL" version="0.0.5014.0" targetFramework="net472" />
+  <package id="XAct.Languages" version="0.0.5014.0" targetFramework="net472" />
+  <package id="XAct.Languages.CS.Roslyn" version="1.1.17040.3290" targetFramework="net472" />
 </packages>
