Repository pattern and CRUD with EF6

--- a/07/PetApp/Web/Web.config
+++ b/07/PetApp/Web/Web.config
@@ -61,4 +61,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="PetModel" connectionString="data source=petdbserver.database.windows.net;initial catalog=PetDb;persist security info=True;user id=dev;password=Password123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+	</connectionStrings>
 </configuration>
