--- a/07/PetApp/Data/Data.csproj
+++ b/07/PetApp/Data/Data.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="CatRepository.cs" />
     <Compile Include="Entities\Cat.cs" />
     <Compile Include="Entities\catType.cs" />
     <Compile Include="Entities\Customer.cs" />
@@ -63,6 +63,7 @@
     <Compile Include="Entities\Login.cs" />
     <Compile Include="Entities\Meal.cs" />
     <Compile Include="Entities\PetModel.cs" />
+    <Compile Include="ICatRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
