EFCore Code first

--- a/08/CoreMVC/CoreMVC/appsettings.json
+++ b/08/CoreMVC/CoreMVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "SuperHeroDb": "Server=petdbserver.database.windows.net;Database=SuperHeroDb;user=dev;password=Password123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
