--- a/07/PetApp/Web/Web.config
+++ b/07/PetApp/Web/Web.config
@@ -15,8 +15,30 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="Home/Login"></forms>
+    </authentication>
+
+    <membership defaultProvider="CustomMembership">
+      <providers>
+        <clear/>
+        <add name="CustomMembership"
+             type="Web.CustomFilter.CustomMembership"/>
+      </providers>
+    </membership>
+    
+    <roleManager defaultProvider="CustomRole" enabled="true">
+      <providers>
+        <clear/>
+        <add name="CustomRole" type="Web.CustomFilter.CustomRole" />
+      </providers>
+    </roleManager>
+
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
+    <httpModules>
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
+    </httpModules>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
@@ -56,12 +78,15 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <system.webServer>
+    <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <entityFramework>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-	<connectionStrings>
-		<add name="PetModel" connectionString="data source=petdbserver.database.windows.net;initial catalog=PetDb;persist security info=True;user id=dev;password=Password123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <connectionStrings>
+    <add name="PetModel" connectionString="data source=petdbserver.database.windows.net;initial catalog=PetDb;persist security info=True;user id=dev;password=Password123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  </connectionStrings>
 </configuration>
